add index.html and css files

--- a/Index.html
+++ b/Index.html
@@ -3,19 +3,21 @@
     <head>
         
 <title>Ta'Janae's first website </title>
+<link rel="stylesheet" href="style.css">
     </head>
    
 
     <body>
-        <!-- All content goes here -->
-        <div> 
-            <nav>
+      <!-- All content goes here -->
+           <div id="all-contents"
+      <nav></nav>
     <h1>Ta'Janae's first website </h1>
-    <ul>
-        <li>
+    <ul id="nav-ul">
+
+        <li  class="nav-li" > 
           <a href="index.html"> Home </a>
         </li>
-        <li>
+        <li  class="nav-li" > 
           <a href="portfolio.html"> Portfolio </a>
         </li>
     </ul>
@@ -29,19 +31,19 @@
 
         <main>
   <!-- Sidebar section -->
-  <div>
-    <img 
+  <div class="sidebar">
+    <img class="sidebar-img"
     src="https://e1.pxfuel.com/desktop-wallpaper/582/663/desktop-wallpaper-brown-aesthetic-pc-aesthetic-brown.jpg">
   <h2>Ta'Janae Morris </h2>
 </div>
 <p>student at chalmette high</p>
   <!-- Content section -->
-  <div>
+  <div class="content">
     <h2></h2>
     <p></p>
     <!-- Interests section -->
-    <div>
-        <h3>Interests</h3>
+    <div id="interests">
+        <h3> Interests</h3>
         <ul>
             <li>Volleyball</li>
             <li>Business management </li>
