add portfolio.html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
     <head>
        <title> Ta'janae's Amazing website </title>
-       <link rel="stylesheet"  href=style.css">
+       <link rel="stylesheet"  href="style.css">
     </head>
 
     <body>
