add bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,7 +8,8 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: rgb(118, 255, 106);
+			background-color: rgb(0, 85, 21);
+			border-radius: 50%;
 			font-size: 300%;
 			text-align: center;
 			user-select: none;
@@ -19,6 +20,7 @@
 		}
 		.board{
 			height: 100vh;
+			background-color: rgb(177, 166, 144);
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
@@ -29,7 +31,7 @@
 	<div class="box">?</div>
 
 	<script>
-		(function(){} )
+		(function(){ 
 			
 			// 'use strict'
 			/* global jQuery */
@@ -74,11 +76,11 @@
 			*/
 			function update() {
 				     /* Your Code to Increase positionX by 10 HERE*/
-					 positionX = positionX + speed 
+					 positionX = positionX + speed; 
 				     moveBoxTo(positionX)
-                     if (positionX > boardwidth) {
+                     if (positionX > boardWidth) {
 						speed = -speed;
-					};
+					}
 			      	if (positionX < 0) {
 				 		 speed = speed * -1
 					}
@@ -91,7 +93,7 @@
 			*/
 			function handleBoxClick() {
 				positionX = 0;
-				points++
+				points = points + 1
 				if (speed > 0) {
 					speed = speed + 3
 				} else if (speed < 0) {
